# for_study_nptool

./: .gitignore  README.md  thisNPTool.sh
Examples/Example1/: RunToTreat.txt  ShowResults.C  project.config
Examples/Example4/: Analysis.cxx  README  RunToTreat.txt  Snakefile  hclient.C  project.config  sim.sh
Inputs/DetectorConfiguration/: Example1.detector
Inputs/EventGenerator/: neutron.source  proton.source  sofia_238U.reaction
NPLib/: .gitignore
NPLib/Core/: CMakeLists.txt  NPCalibrationManager.cxx  NPDetectorFactory.cxx  NPDetectorManager.cxx  NPDetectorManager.h  NPOptionManager.cxx  NPOptionManager.h  NPVDetector.h  RootHistogramsCalib.cxx  RootHistogramsCalib.h  RootOutput.cxx
NPLib/Detectors/CATS/: TCATSPhysics.cxx  TCATSPhysics.h
NPLib/Detectors/Catana/: TCatanaPhysics.h
NPLib/Detectors/Exogam/: CMakeLists.txt  Geometry_Clover_Exogam.h  TExogamData.cxx  TExogamData.h  TExogamPhysics.cxx  TExogamPhysics.h  TExogamPhysicsReader.cxx  TExogamPhysicsReader.h  TExogamSpectra.cxx  TExogamSpectra.h
NPLib/Detectors/FissionChamber/: TFissionChamberPhysics.cxx  TFissionChamberPhysics.h
NPLib/Detectors/GANIL/: CMakeLists.txt  TGANILTacData.cxx  TGANILTacData.h  TGANILTacPhysics.cxx  TGANILTacPhysics.h  TGANILTriggerData.cxx  TGANILTriggerData.h
NPLib/Detectors/MUSETT/: CMakeLists.txt  MUSETTMap.h  TMUSETTData.cxx  TMUSETTData.h  TMUSETTPhysics.cxx  TMUSETTPhysics.h  TMUSETTSpectra.cxx  TMUSETTSpectra.h
NPLib/Detectors/MUSETT/ressources/: Mask.cxx
NPLib/Detectors/MUST2/: CMakeLists.txt  TMust2Data.h  TMust2LinkDef.h  TMust2Physics.cxx  TMust2Physics.h  TMust2PhysicsReader.cxx  TMust2PhysicsReader.h
NPLib/Detectors/Mugast/: CMakeLists.txt  TMugastLinkDef.h  TMugastPhysicsReader.cxx  TMugastPhysicsReader.h
NPLib/Detectors/PISTA/: CMakeLists.txt  TFPMWData.cxx  TFPMWData.h  TFPMWPhysics.cxx  TFPMWPhysics.h  TICData.cxx  TICData.h  TICPhysics.cxx  TICPhysics.h  TPISTAData.cxx  TPISTAData.h  TPISTAPhysics.cxx  TPISTAPhysics.h  TPISTASpectra.cxx  TReconstruction.cxx  TReconstruction.h  TVamosReconstruction.cxx  TVamosReconstruction.h
NPLib/Detectors/SEASON/: CMakeLists.txt  TSEASONData.cxx  TSEASONData.h  TSEASONPhysics.cxx  TSEASONPhysics.h  TSEASONSpectra.cxx  TSEASONSpectra.h
NPLib/Detectors/SEASON/ressources/: MaskBack.cxx  MaskFront.cxx
NPLib/Detectors/TAC/: CMakeLists.txt  TTACData.cxx  TTACData.h  TTACPhysics.cxx  TTACPhysics.h  TTACPhysicsReader.cxx  TTACPhysicsReader.h  TTACSpectra.cxx  TTACSpectra.h
NPLib/Detectors/ZDD/: CMakeLists.txt  TZDDData.cxx  TZDDData.h  TZDDPhysics.cxx  TZDDPhysics.h  TZDDPhysicsReader.cxx  TZDDPhysicsReader.h  TZDDSpectra.cxx  TZDDSpectra.h
NPLib/Physics/: NPReaction.cxx  NPReaction.h
NPLib/Utility/: CMakeLists.txt  npcalibration  npcalibration.cxx  npreader.cxx
NPLib/scripts/: build_dict.sh.in
NPSimulation/: CMakeLists.txt
NPSimulation/Detectors/Sofia/: CMakeLists.txt  Glad.cc  Glad.hh  GladFieldPropagation.cc  GladFieldPropagation.hh  SofTofW.cc
NPSimulation/EventGenerator/: EventGeneratorIsotropic.cc  EventGeneratorIsotropic.hh
NPSimulation/Process/: BeamReaction.cc  FissionDecay.cc  NeutronHPphysics.cc  PhysicsList.cc
NPSimulation/Scorers/: DSSDScorers.cc  DSSDScorers.hh  InteractionScorers.cc  PlasticBar.cc  PlasticBar.hh  ProcessScorers.cc  ProcessScorers.hh
Projects/E805/: Analysis.cxx  Analysis.h  Analysis_E805.cxx  Analysis_E805.h  CUT_Cr.root  CUT_deuton.root  CUT_triton.root  Calibration1.txt  Calibration1Pixel.txt  Calibration1old.txt  Calibration2.txt  CalibrationAphaTest.txt  Calibration_no_CsI.txt  DrawEx.cxx  DrawEx.h  Geometry_Clover_Exogam.h  RichManNPMFMing.py  RunToTreat.txt  Tree_e843.C  Tree_e843.h  project.config  projet_hugo_jacob.tar  test  test_calib.txt
Projects/E805/ProjetInfo/: mini.h  (+6 more)
Projects/E805_simu/: 48Cr_pd_test.reaction  Analysis.cxx  Analysis.h  MUST2_E805.detector  RunToTreat.txt  project.config
Projects/GRIT/: .gitignore  Analysis.cxx  Analysis.h  Snakefile  project.config
Projects/Gaspard/: 132Sndp.reaction  CMakeLists.txt  gaspard.detector
Projects/Inelastic/: 238Uel.reaction  Analysis.cxx  Analysis.h  RunToTreat.txt  Vendeta_inelastic.detector  sim.sh
Projects/MUGAST_LISE/: Analysis.cxx
Projects/MUSETT/: Analysis.cxx  Analysis.h  PhysicsListOption.txt  RunToTreat.txt  analyse_data.py  analyse_simu.py  change_coinc_config.sh  change_configuration.py  clean.py  clean_dir.py  merge_simu.py  modify_run_to_treat.py  multithread_simu.sh  routine.sh  sanity_check.py
Projects/MUST_AND_ZDD/: Analysis.cxx  Analysis.h  MUST_AND_ZDD.detector
Projects/Minos/: Minos.detector
Projects/Nebula/: Analysis.cxx  Nebula.detector  PhysicsListOption.txt
Projects/PISTA/: Analysis.cxx  Analysis.h
Projects/S034/: CMakeLists.txt
Projects/SEASON/: Analysis.cxx  Analysis.h  Calibration.txt  RunToTreat.txt  launch_alpha_geometries.sh  launch_electron_geometries.sh  launch_multiple_electrons_geometries.sh  launch_multiple_electrons_geometries_multithread.sh  nohup.out
Projects/Sofia/: Analysis.cxx  Analysis.h  PhysicsListOption.txt  RunToTreat.txt  project.config  sim.sh  sim_exo.sh  sofia.detector  sofia.reaction  sofia_238U.reaction
Projects/Strasse/: Analysis.cxx
Projects/Vendeta/: Analysis.cxx  Vendeta.detector
Projects/Vendeta_sim/: Analysis.cxx  Analysis.h  PhysicsListOption.txt  RunToTreat.txt  sim.sh
Projects/ana_e850/: Analysis.cxx  Analysis.h  Calibration.txt  RunToTreat.txt  pista_e850_part1.detector  pista_e850_part2.detector  project.config
Projects/e748/: Analysis.cxx  Analysis.h  BeamID.cxx  CMakeLists.txt  ID.cxx  MT.cxx  Target.cxx  e748.detector  project.config
Projects/e793s/: Analysis.cxx  Analysis.h  autosim.sh  sim.sh
Projects/e850/: Analysis.cxx  Analysis.h  Calibration.txt  ana.sh  fastana.py  pista.detector  pista_e850_part1.detector  pista_e850_part2.detector
Projects/e870/: .ninja_deps  .ninja_log  Analysis.cxx  Analysis.h  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  launch_simu.sh  libNPAnalysis.dylib
Projects/macros/: GeometricalEfficiency.C
Projects/s455/: Analysis.cxx  Analysis.h  RunToTreat.txt
(+1206 files in other folders)
